tests/baselines/reference/externalModuleWithoutCompilerFlag1.errors.txt
externalModuleWithoutCompilerFlag1.ts(2,17): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== externalModuleWithoutCompilerFlag1.ts (1 errors) ====
    // Not on line 0 because we want to verify the error is placed in the appropriate location.
      export module M {
                    ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }